[tool.poetry]
name = "bean-there"
version = "0.1.0"
description = ""
authors = ["sarah fulham <sarahlfulham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.83.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
